# ChronoSchismLogViewer

./: Agents.md  Cargo.toml  README.md
docs/: Plan.HeckelDiffEngine.md  Plan.MainImplementation.md  Plan.TimestampParserOperations.md  Requirements.md
src/: app_logic.rs  core.rs  lib.rs  main.rs  ui_description_layer.rs
src/app_logic/: handler.rs  handler_tests.rs  ids.rs
src/core/: diff_engine.rs  mod.rs  path_utils.rs  settings.rs  settings_manager.rs  timestamp_parser.rs
tests/: log_file_A.txt  log_file_B.txt
